# c4a-mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  PRD.md  README.md  SPEC.md  mcp.json.example  pyproject.toml  pyrightconfig.json  test_config.py
.github/workflows/: ci-cd.yml
scripts/: use_tools_direct.py  verify_refactor.py
src/c4a_mcp/: __init__.py  __main__.py  adaptive_runner.py  base_runner.py  config_models.py  crawler_registry.py  logging_config.py  logging_utils.py  models.py  runner_tool.py  server.py
src/c4a_mcp/config/: defaults.yaml
src/c4a_mcp/presets/: __init__.py  adaptive_factory.py  crawling_factory.py  extraction_factory.py  models.py  preset_tools.py
tests/: test_adaptive_factory.py  test_adaptive_runner.py  test_config.py  test_crawling_factory.py  test_extraction_factory.py  test_preset_models.py  test_preset_tools.py  test_runner_tool.py
tests/unit/: test_crawler_registry.py
