[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c4a-mcp"
version = "0.1.0"
description = "A model context protocol (MCP) for web integration with C4A"
readme = "README.md"
authors = [
    {name = "Vitalii V", email = "myrdhin.yates@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "crawl4ai>=0.4.0",
    "pydantic",
    "cachetools",
    "python-dotenv",
    "psutil>=6.0.0",
]

[dependency-groups]
dev = [
  "pytest",
  "black",
  "pytest-asyncio>=0.23.0",
  "ruff",
  "pre-commit",
]
embeddings = [
  "sentence-transformers>=2.2.0",
]

[project.urls]
"Homepage" = "https://github.com/blghtr/c4a_mcp"
"Bug Tracker" = "https://github.com/blghtr/c4a_mcp/issues"

[project.scripts]
c4a-mcp = "c4a_mcp:server.serve"

[tool.hatch.build.targets.wheel]
packages = ["src/c4a_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "PL", "S"]
ignore = [
    "E501",  # Line too long, handled by black
    "E302",  # Expected 2 blank lines (black handles this)
    "E303",  # Too many blank lines (black handles this)
    "W293",  # Blank line contains whitespace (black handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F401",  # Unused imports (common in tests for fixtures)
    "F841",  # Unused variable (common in test assertions)
    "PLR2004",  # Magic value used in comparison (common in tests)
    "PLR0913",  # Too many arguments (common in test fixtures)
    "PLW0603",  # Redefining names from outer scope (common in tests)
    "PLR0912",  # Too many branches (common in test files)
    "S101",  # Use of assert (tests need asserts)
    "E302",  # Expected 2 blank lines
    "E303",  # Too many blank lines
    "W293",  # Blank line contains whitespace
    "E402",  # Module level import not at top of file
    "I001",  # Import block is un-sorted or un-formatted
    "W292",  # No newline at end of file
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
extraPaths = ["src"]
reportMissingImports = false
reportMissingTypeStubs = false
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportPrivateUsage = "none"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportOptionalIterable = "none"
reportOptionalContextManager = "none"
reportOptionalOperand = "none"
reportArgumentType = "warning"
reportCallIssue = "warning"
typeCheckingMode = "basic"
pythonVersion = "3.11"
